--- a/train_sentiment.ipynb
+++ b/train_sentiment.ipynb
@@ -1,21 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "42798de3",
-   "metadata": {},
-   "source": [
-    "# Sentiment Analysis with DistilBERT Transfer Learning\n",
-    "\n",
-    "This notebook fine-tunes DistilBERT on Yelp reviews for 3-class sentiment classification:\n",
-    "- **Negative**: 1-2 stars\n",
-    "- **Neutral**: 3 stars  \n",
-    "- **Positive**: 4-5 stars"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "k1wm7tt0xg",
    "metadata": {},
    "outputs": [
@@ -29,7 +16,6 @@
     }
    ],
    "source": [
-    "# Cell 1: Imports and Setup\n",
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,12 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "mz8wlme0mda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 2: Configuration Parameters\n",
     "CONFIG = {\n",
     "    # https://huggingface.co/distilbert/distilbert-base-uncased\n",
     "    'model_name': 'distilbert-base-uncased',\n",
@@ -82,7 +67,6 @@
     "    'early_stopping_patience': 2\n",
     "}\n",
     "\n",
-    "# Label mapping\n",
     "LABEL_MAP = {\n",
     "    'negative': 0,  # 1-2 stars\n",
     "    'neutral': 1,   # 3 stars\n",
@@ -94,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "lj4xk3gamg",
    "metadata": {},
    "outputs": [
@@ -154,10 +138,8 @@
     "            \"No reviews found in database. Please run load_dataset.py first to populate the database.\"\n",
     "        )\n",
     "    \n",
-    "    # Convert to DataFrame for easier manipulation\n",
     "    data = []\n",
     "    for review in all_reviews:\n",
-    "        # Map stars to sentiment labels\n",
     "        if review.stars <= 2:\n",
     "            label = 0  # negative\n",
     "        elif review.stars == 3:\n",
@@ -183,7 +165,6 @@
     "    print(\"\\nSample reviews:\")\n",
     "    print(df.head())\n",
     "finally:\n",
-    "    # Properly close the session by triggering the generator's finally block\n",
     "    try:\n",
     "        next(session_gen)\n",
     "    except StopIteration:\n",
@@ -234,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "xqy1xibtv1",
    "metadata": {},
    "outputs": [
@@ -254,12 +235,10 @@
     }
    ],
    "source": [
-    "# Cell 5: Initialize Tokenizer and Create Datasets\n",
     "print(\"Loading tokenizer...\")\n",
     "tokenizer = DistilBertTokenizer.from_pretrained(CONFIG['model_name'])\n",
     "print(f\"Tokenizer loaded: {CONFIG['model_name']}\")\n",
     "\n",
-    "# Create full dataset\n",
     "print(\"\\nCreating PyTorch datasets...\")\n",
     "full_dataset = SentimentDataset(\n",
     "    texts=df['text'].values,\n",
@@ -268,7 +247,7 @@
     "    max_length=CONFIG['max_length']\n",
     ")\n",
     "\n",
-    "# Split into train and validation (80/20)\n",
+    "# split dataset\n",
     "train_size = int(CONFIG['train_split'] * len(full_dataset))\n",
     "val_size = len(full_dataset) - train_size\n",
     "\n",
@@ -303,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "numtz03827j",
    "metadata": {},
    "outputs": [
@@ -335,7 +314,6 @@
     }
    ],
    "source": [
-    "# Cell 6: Initialize Model and Optimizer\n",
     "print(\"Loading DistilBERT model...\")\n",
     "model = DistilBertForSequenceClassification.from_pretrained(\n",
     "    CONFIG['model_name'],\n",
